PIRATE-3038 Fix layout issue of navigation widget in IE11 #2

--- a/css/widget-navigation.less
+++ b/css/widget-navigation.less
@@ -218,6 +218,10 @@ div.widget.extendednavigation .extendednavigation ul.align-left, div.widget.exte
 			display: none;
 		}
 
+		li {
+			display: block;
+		}
+
 		ul li .text {
 			border: none;
 			display: block;
